# MMSample

./: CMakeLists.txt  README.md  sws.c
apue/: CMakeLists.txt  README.md  apue.c  apue.h  echoall.c  echoarg.c  f10_10.c  f10_11.c  f10_15.c  f10_2.c  f10_20.c  f10_5.c  f10_6.c  f1_3.c  f1_8.c  f1_9.c  f2_16.c  f3_1.c  f3_11.c  f3_2.c  f3_5.c  f4_12.c  f4_16.c  f4_21.c  f4_23.c  f4_24.c  f4_25.c  f4_3.c  f4_8.c  f4_9.c  f5_11.c  f5_12.c  f5_13.c  f5_15.c  f5_4.c  f5_5.c  f6_11.c  f6_2.c  f7_1.c  f7_13.c  (+25 more)
cppPrimerPlus/: CMakeLists.txt  a.out  funtemp.cpp  regex.cpp  tempover.cpp  thread.cpp  towtemps.cpp  twoswap.cpp
ffdemo/: CMakeLists.txt  aplayer.c  dump_stream_info.cpp  extract_audio.c  extract_video.cpp  extract_x265.cpp  filter_naive.cpp  sine.cpp  transcode_audio.cpp  transcode_naive.cpp  transcode_video.cpp
footage/: bitmap.raw
gles/: CMakeLists.txt  common.h  fragment.glsl  gles.cmake  gles.cpp  png_texture.cpp  vertex.glsl
gstreamer/: CMakeLists.txt  gstreamer.cmake  gstreamer.cpp
gtk/: CMakeLists.txt  gtk.cmake  gtk.cpp  gtk_arrow.c  gtk_button.c  gtk_check_button.c  gtk_label.c  gtk_radio_button.c  gtk_scale.c  gtk_scrollbar.c  gtk_table.c  gtk_toggle_button.c  gtk_tooltips.c  hello_world.c  hello_world2.c
heif/: CMakeLists.txt  rgba2heif.cpp  rgba2heif.h
igesture/: CMakeLists.txt  igesture.c
leetcode/: CMakeLists.txt  README.md  _atoi.c  _sqrt.c  _strstr.c  add-binary.c  climbing-stairs.c  combination.cpp  divide-two-integers.c  first-missing-positive.c  group-anagrams.c  integer-to-roman.c  jump-game-II.c  length-of-last-word.c  maximum-subarray.c  merge-k-sorted-list.c  merge-sorted-array.c  minimum-path-sum.c  multiply-strings.c  permutation.cxx  plus-one.c  pow.c  remove-element.c  remove-nth-node-from-end-of-list.c  roman-to-integer.c  search-for-a-range.cpp  simplify-path.c  sort-colors.c  subsets.cpp  substring-with-concatenation-of-all-words.cpp  swap-nodes-in-pairs.c  unique-paths.c  valid-number.c
misc/: CMakeLists.txt  count_and_say.cxx  float2str.c  int2str.c  misc.cmake  str2float.c  str2int.c  triangle.c
ocv/: CMakeLists.txt  basic-drawing.cpp  basic-linear-transform.cpp  blending-two-image.cpp  changing-constrast-brightness-image.cpp  display-image.cpp  load-modify-save-image.cpp  mat-basic.cpp  mat-mask-operation.cpp  mat-operation.cpp  mat_basic.cpp  morphology-ex.cpp  morphology.cpp  random-drawing.cpp  scan-image.cpp  smoothing.cpp  thresholding_simple.cpp
png/: CMakeLists.txt  png_encoder.cpp
sdl/: CMakeLists.txt  sdl_image.cpp  sdl_image_bmp.cpp  sdl_image_gif.cpp
webp/: CMakeLists.txt  awebp.cpp
