
add_executable(f1_3 f1_3.c apue.c)
add_executable(f1_8 f1_8.c)
add_executable(f1_9 f1_9.c)
add_executable(f3_1 f3_1.c)
add_executable(f3_2 f3_2.c apue.c)
add_executable(f3_5 f3_5.c apue.c)
add_executable(f3_11 f3_11 apue.c)
add_executable(f4_3 f4_3.c apue.c)
add_executable(f4_8 f4_8.c apue.c)
add_executable(f4_9 f4_9.c apue.c)
add_executable(f4_12 f4_12.c apue.c)
add_executable(f4_16 f4_16.c apue.c)
add_executable(f4_21 f4_21.c apue.c)
add_executable(file-tree-walker file-tree-walker.c apue.c)
add_executable(f4_23 f4_23.c apue.c)
add_executable(f4_24 f4_24.c apue.c f2_16.c)
add_executable(f4_25 f4_25.c apue.c)

add_executable(f5_4 f5_4.c apue.c)
add_executable(f5_5 f5_5.c apue.c)
add_executable(f5_11 f5_11.c apue.c)
add_executable(f5_12 f5_12.c apue.c)
add_executable(f5_13 f5_13.c apue.c)
add_executable(f5_15 f5_15.c apue.c)
add_executable(print-etc-passwd print-etc-passwd.c)
add_executable(f6_11 f6_11.c)
add_executable(f7_1 f7_1.c)
add_executable(f7_3 f7_3.c apue.c)
add_executable(f7_4 f7_4.c apue.c)
add_executable(f7_13 f7_13.c)
add_executable(f7_16 f7_16.c apue.c)
add_executable(f8_1 f8_1.c apue.c)
add_executable(f8_3 f8_3.c apue.c)
add_executable(f8_6 f8_6.c pr_exit.c apue.c)
add_executable(f8_8 f8_8.c apue.c)
add_executable(f8_12 f8_12.c apue.c)
add_executable(echoall echoall.c apue.c)
add_executable(echoarg echoarg.c)
add_executable(f8_16 f8_16.c apue.c)
add_executable(f8_20 f8_20.c apue.c)
add_executable(f8_23 f8_23.c system.c apue.c pr_exit.c)
add_executable(tsys tsys.c apue.c pr_exit.c)
add_executable(printuids printuids.c apue.c)
add_executable(f8_30 f8_30.c apue.c)
add_executable(f8_31 f8_31.c apue.c pr_exit.c)
add_executable(f9_12 f9_12.c apue.c)
add_executable(f10_2 f10_2.c apue.c)
add_executable(f10_5 f10_5.c apue.c)
add_executable(f10_6 f10_6.c apue.c)
add_executable(f10_10 f10_10.c apue.c)
add_executable(f10_11 f10_11.c apue.c)
add_executable(readlink-f readlink-f.c)
add_executable(long-running-cmd long-running-cmd.c)
add_executable(f10_15 f10_15.c apue.c)
add_executable(f10_20 f10_20.c apue.c pr_mask.c)
