cmake_minimum_required(VERSION 3.5)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

#find_package(PkgConfig REQUIRED)
#pkg_check_modules(GLIB2 gtk+-2.0)
#
#include_directories(${GLIB2_INCLUDE_DIRS})
#link_directories(${GLIB2_LIBRARY_DIRS})
#link_libraries(${GLIB2_LIBRARIES})
include(FindGTK2)
if (GTK2_FOUND)
    include_directories(${GTK2_INCLUDE_DIRS})
    link_directories(${GTK2_LIBRARY_DIRS})
    link_libraries(${GTK2_LIBRARIES})
endif (GTK2_FOUND)

add_executable(gtk gtk.cpp)
add_executable(hello_world hello_world.c)
add_executable(hello_world2 hello_world2.c)
add_executable(gtk_table gtk_table.c)
add_executable(gtk_button gtk_button.c)
add_executable(gtk_toggle_button gtk_toggle_button.c)
add_executable(gtk_check_button gtk_check_button.c)
add_executable(gtk_radio_button gtk_radio_button.c)
add_executable(gtk_scrollbar gtk_scrollbar.c)
add_executable(gtk_scale gtk_scale.c)
add_executable(gtk_label gtk_label.c)
add_executable(gtk_arrow gtk_arrow.c)
add_executable(gtk_tooltips gtk_tooltips.c)