
add_executable(remove-nth-node-from-end-of-list remove-nth-node-from-end-of-list.c)
add_executable(swap-nodes-in-pairs swap-nodes-in-pairs.c)
add_executable(divide-two-integers divide-two-integers.c)
add_executable(multiply-strings multiply-strings.c)
add_executable(_atoi _atoi.c)
add_executable(integer-to-roman integer-to-roman.c)
add_executable(roman-to-integer roman-to-integer.c)
add_executable(remove-element remove-element.c)
add_executable(first-missing-positive first-missing-positive.c)
add_executable(pow pow.c)
add_executable(jump-game-II jump-game-II.c)
add_executable(merge-k-sorted-list merge-k-sorted-list.c)
add_executable(permutation permutation.cxx)
add_executable(search-for-a-range search-for-a-range.cpp)
add_executable(_strstr _strstr.c)
add_executable(combination combination.cpp)
add_executable(substring-with-concatenation-of-all-words substring-with-concatenation-of-all-words.cpp)
add_executable(group-anagrams group-anagrams.c)
add_executable(length-of-last-word length-of-last-word.c)
add_executable(maximum-subarray maximum-subarray.c)
add_executable(plus-one plus-one.c)
add_executable(add-binary add-binary.c)
add_executable(_sqrt _sqrt.c)
add_executable(climbing-stairs climbing-stairs.c)
add_executable(merge-sorted-array merge-sorted-array.c)
add_executable(sort-colors sort-colors.c)
add_executable(simplify-path simplify-path.c)
add_executable(unique-paths unique-paths.c)
add_executable(valid-number valid-number.c)
add_executable(minimum-path-sum minimum-path-sum.c)
add_executable(subsets subsets.cpp)
